committing all files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ server.error.include-message=always
 
 # actuator exposure
 management.endpoints.web.exposure.include=health,info,metrics
+
+spring.batch.job.enabled=false
