--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/spring_batch
 spring.datasource.username=root
 spring.datasource.password=admin
 
-spring.batch.jdbc.initialize-schema=always
+spring.universitydatasource.jdbc-url=jdbc:mysql://localhost:3306/university
+spring.universitydatasource.username=root
+spring.universitydatasource.password=admin
 
+
+#spring.batch.jdbc.initialize-schema=always
+#spring.batch.initialize-schema=always
+#spring.batch.schema=classpath:student.sql
 
 spring.thymeleaf.cache=false
 server.error.include-message=always
@@ -11,4 +17,4 @@ server.error.include-message=always
 # actuator exposure
 management.endpoints.web.exposure.include=health,info,metrics
 
-spring.batch.job.enabled=false
+#spring.batch.job.enabled=false
